<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/selectHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crop_activity_title" />

    <Button
        android:id="@+id/selectPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_photo" />
    <Button
        android:id="@+id/all_crash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_crash" />

    <Button
        android:id="@+id/frame_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_animation" />
    <Button
        android:id="@+id/tween_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tween_animation" />
    <Button
        android:id="@+id/value_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_animation" />

    <Button
        android:id="@+id/threadpool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/threadpool" />
    <Button
        android:id="@+id/socket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/socket" />
    <Button
        android:id="@+id/livedata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/liveData" />
</LinearLayout>