<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <Button
        android:id="@+id/fixedThreadPool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fixedthreadpool" />

    <Button
        android:id="@+id/cacheThreadPool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cachethreadpool" />

    <Button
        android:id="@+id/scheduleThreadPool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scheduledthreadpool" />

    <Button
        android:id="@+id/singleThreadPool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singlethreadpool" />

    <Button
        android:id="@+id/myThreadPool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myThreadPool" />


</LinearLayout>